--- a/config/boards/shields/dokkaebi/dokkaebi.dtsi
+++ b/config/boards/shields/dokkaebi/dokkaebi.dtsi
@@ -29,6 +29,8 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                 RC(3,8) RC(3,9) 
         label = "KSCAN";
 
         diode-direction = "col2row";
+        debounce-press-ms = <4>;
+		debounce-release-ms = <20>;
         row-gpios
             = <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             , <&pro_micro 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
@@ -37,5 +39,4 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                 RC(3,8) RC(3,9) 
             ;
 
     };
-
 };
