--- a/config/boards/shields/dokkaebi/dokkaebi.zmk.yml
+++ b/config/boards/shields/dokkaebi/dokkaebi.zmk.yml
@@ -3,9 +3,8 @@ id: dokkaebi
 name: dokkaebi
 type: shield
 url: https://github.com/zenithistk/dokkaebi
-requires: [pro_micro]
+requires:
+  - pro_micro
+  - pimoroni trackball_pim447
 features:
-  - keys
-siblings:
-  - dokkaebi_left
-  - dokkaebi_right
+  - mouse
