--- a/config/boards/shields/dokkaebi/dokkaebi.conf
+++ b/config/boards/shields/dokkaebi/dokkaebi.conf
@@ -25,5 +25,11 @@
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=420000
 
 CONFIG_ZMK_MOUSE=y
-CONFIG_ZMK_TRACKBALL_PIM447=y
+# enable i2c
 CONFIG_I2C=y
+
+# IQS5XX
+CONFIG_IQS5XX=y
+CONFIG_IQS5XX_THREAD_PRIORITY=100
+CONFIG_IQS5XX_INTERRUPT=y
+#CONFIG_IQS5XX_POLL=y
