--- a/config/west.yml
+++ b/config/west.yml
@@ -5,7 +5,7 @@ manifest:
   projects:
     - name: zmk
       remote: jgreel
-      revision: devel-mouse-pim447
+      revision: mouse-3.2-pim447
       import: app/west.yml
   self:
     path: config
