--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,11 @@
 manifest:
   remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
+    - name: jgreel
+      url-base: https://github.com/jgreel
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: jgreel
+      revision: mouse-3.2-cirque
       import: app/west.yml
   self:
     path: config
