--- a/config/boards/shields/dokkaebi/dokkaebi.conf
+++ b/config/boards/shields/dokkaebi/dokkaebi.conf
@@ -26,16 +26,17 @@
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-CONFIG_I2C=y
-
 # CONFIG_BT_MAX_CONN=2
 # CONFIG_BT_MAX_PAIRED=2
 
 # CONFIG_ZMK_SLEEP=y
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=420000
 
-CONFIG_PINNACLE=y
-CONFIG_PINNACLE_TRIGGER_OWN_THREAD=y
 # CONFIG_PINNACLE_TRIGGER_GLOBAL_THREAD=y
 # CONFIG_SENSOR_INIT_PRIORITY=
-CONFIG_ZMK_MOUSE=y
+
+
+# CONFIG_I2C=y
+# CONFIG_PINNACLE=y
+# CONFIG_PINNACLE_TRIGGER_OWN_THREAD=y
+# CONFIG_ZMK_MOUSE=y
