--- a/config/boards/shields/dokkaebi/dokkaebi.conf
+++ b/config/boards/shields/dokkaebi/dokkaebi.conf
@@ -36,7 +36,7 @@
 # CONFIG_SENSOR_INIT_PRIORITY=
 
 
-# CONFIG_I2C=y
-# CONFIG_PINNACLE=y
-# CONFIG_PINNACLE_TRIGGER_OWN_THREAD=y
-# CONFIG_ZMK_MOUSE=y
+CONFIG_I2C=y
+CONFIG_PINNACLE=y
+CONFIG_PINNACLE_TRIGGER_OWN_THREAD=y
+CONFIG_ZMK_MOUSE=y
