--- a/config/boards/shields/dokkaebi/dokkaebi.conf
+++ b/config/boards/shields/dokkaebi/dokkaebi.conf
@@ -38,5 +38,5 @@
 
 CONFIG_I2C=y
 CONFIG_PINNACLE=y
-# CONFIG_PINNACLE_TRIGGER_OWN_THREAD=y
+CONFIG_PINNACLE_TRIGGER_OWN_THREAD=y
 CONFIG_ZMK_MOUSE=y
