--- a/config/boards/shields/dokkaebi/dokkaebi.dtsi
+++ b/config/boards/shields/dokkaebi/dokkaebi.dtsi
@@ -40,3 +40,29 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                 RC(3,8) RC(3,9) 
 
     };
 };
+
+
+/ {
+    keys {
+        compatible = "gpio-keys";
+        soft_off_gpio_key: soft_off_gpio_key {
+            gpios = <&pro_micro 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+            label = "Soft Off Toggle";
+        };
+    };
+
+    kscan {
+        compatible = "zmk,kscan-gpio-direct";
+        input-gpios = <&soft_off_gpio_key>;
+        wakeup-source;
+    };
+
+    chosen {
+        zmk,kscan = &kscan;
+    };
+
+    soft_off_wakers {
+        compatible = "zmk,soft-off-wakeup-sources";
+        wakeup-sources = <&kscan>;
+    };
+};
