--- a/config/boards/shields/dokkaebi/dokkaebi.dtsi
+++ b/config/boards/shields/dokkaebi/dokkaebi.dtsi
@@ -39,10 +39,7 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                 RC(3,8) RC(3,9) 
             ;
 
     };
-};
 
-
-/ {
     keys {
         compatible = "gpio-keys";
         soft_off_gpio_key: soft_off_gpio_key {
@@ -59,18 +56,14 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                 RC(3,8) RC(3,9) 
         };
     };
 
-    kscan {
+    kscan1: kscan {
         compatible = "zmk,kscan-gpio-direct";
         input-gpios = <&soft_off_gpio_key>;
         wakeup-source;
     };
 
-    chosen {
-        zmk,kscan = &kscan;
-    };
-
     soft_off_wakers {
         compatible = "zmk,soft-off-wakeup-sources";
-        wakeup-sources = <&kscan>;
+        wakeup-sources = <&kscan1>;
     };
 };
