--- a/config/boards/shields/dokkaebi/dokkaebi.dtsi
+++ b/config/boards/shields/dokkaebi/dokkaebi.dtsi
@@ -40,30 +40,44 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                 RC(3,8) RC(3,9) 
 
     };
 
-    keys {
-        compatible = "gpio-keys";
-        soft_off_gpio_key: soft_off_gpio_key {
-            gpios = <&pro_micro 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
-            label = "Soft Off Toggle";
-        };
-    };
-
     behaviors {
         hw_soft_off: hw_soft_off {
             compatible = "zmk,behavior-soft-off";
             #binding-cells = <0>;
-            hold-trigger = <1000>; // 즉시 작동
+            split-peripheral-off-on-press; // Turn peripheral off immediately for reliability
+            hold-time-ms = <2000>; // Only turn off if the key is held for 2 seconds or longer.
         };
     };
 
-    kscan1: kscan {
+    keys {
+        compatible = "gpio-keys";
+        soft_off_gpio_key: soft_off_gpio_key {
+            gpios = <&pro_micro 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+        };
+    };
+
+    wakeup_scan: wakeup_scan {
         compatible = "zmk,kscan-gpio-direct";
-        input-gpios = <&soft_off_gpio_key>;
+        input-keys = <&soft_off_gpio_key>;
         wakeup-source;
+    };
+
+    side_band_behavior_triggers: side_band_behavior_triggers {
+        compatible = "zmk,kscan-sideband-behaviors";
+
+        kscan = <&wakeup_scan>;
+        auto-enable;
+        wakeup-source;
+
+        soft_off {
+            column = <0>;
+            row = <0>;
+            bindings = <&hw_soft_off>;
+        };
     };
 
     soft_off_wakers {
         compatible = "zmk,soft-off-wakeup-sources";
-        wakeup-sources = <&kscan1>;
+        wakeup-sources = <&wakeup_scan>;
     };
 };
