--- a/config/boards/shields/dokkaebi/dokkaebi.dtsi
+++ b/config/boards/shields/dokkaebi/dokkaebi.dtsi
@@ -76,4 +76,8 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)                 RC(3,8) RC(3,9) 
         };
     };
 
+    soft_off_wakers {
+        compatible = "zmk,soft-off-wakeup-sources";
+        wakeup-sources = <&wakeup_scan>;
+    };
 };
