--- a/config/boards/shields/dokkaebi/dokkaebi_right.conf
+++ b/config/boards/shields/dokkaebi/dokkaebi_right.conf
@@ -2,3 +2,4 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=y
 CONFIG_ZMK_EXT_POWER=n
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_PM_SOFT_OFF=y
